#148: Added pipeline list, info, run and outputs to API + Re-generated servers
